CDL.Lang/Parsing/gen/CDLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/tuna/Documents/Onlab/Test/CDL/Parsing/CDL.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class CDLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		CHARACTER=1, HEALTH=2, EFFECTEVERYTURN=3, WITHCHANCE=4, OR=5, ACTIONS=6, 
		EFFECT=7, EFFECTS=8, APPLY=9, DAMAGE=10, INSTANTLY=11, ENDOFTURN=12, FOR=13, 
		TURNS=14, TO=15, ENEMIES=16, PLAYER=17, OUTGOING=18, INCOMING=19, IS=20, 
		SET=21, TARGET=22, DEAL=23, CARD=24, RARITY=25, VALIDTARGETS=26, SELF=27, 
		DESC=28, GAME=29, STAGES=30, LENGTH=31, MAXWIDTH=32, MINWIDTH=33, FILLWITH=34, 
		MUSTCONTAIN=35, ENDSWITH=36, NODE=37, NODEENEMIES=38, STAGE=39, REWARDS=40, 
		NAME=41, PLAYERSELECT=42, ENEMY=43, ENEMYLC=44, DECK=45, ENEMYACTION=46, 
		X=47, MUL=48, DIV=49, PLUS=50, MINUS=51, CARET=52, CLN=53, LBRACKET=54, 
		RBRACKET=55, LCURLY=56, RCURLY=57, LPAREN=58, RPAREN=59, COMMA=60, PERCENT=61, 
		EQUALS=62, INTTYPE=63, DOUBLETYPE=64, STRINGTYPE=65, BOOLEANTYPE=66, TRUE=67, 
		FALSE=68, STRING=69, INT=70, DOUBLE=71, ID=72, WS=73, EOS=74, COMMENT=75;
	public const int
		RULE_program = 0, RULE_configBlock = 1, RULE_boolean = 2, RULE_varName = 3, 
		RULE_number = 4, RULE_varRef = 5, RULE_rarityName = 6, RULE_typeName = 7, 
		RULE_variableDeclaration = 8, RULE_typeNameVarName = 9, RULE_expression = 10, 
		RULE_expressionContainer = 11, RULE_addSubOp = 12, RULE_mulDivOp = 13, 
		RULE_expressionOp = 14, RULE_primary = 15, RULE_parenthesizedExpression = 16, 
		RULE_literalExpression = 17, RULE_list = 18, RULE_listItem = 19, RULE_targetItem = 20, 
		RULE_enemyTarget = 21, RULE_paramsDef = 22, RULE_params = 23, RULE_gameSetup = 24, 
		RULE_gameProperties = 25, RULE_stageDefinition = 26, RULE_stageProperties = 27, 
		RULE_nodeDefinition = 28, RULE_nodeProperties = 29, RULE_charSetup = 30, 
		RULE_charProperties = 31, RULE_enemyDefinition = 32, RULE_enemyProperties = 33, 
		RULE_enemyActionDefinition = 34, RULE_enemyActionProperties = 35, RULE_effectDefinition = 36, 
		RULE_effectType = 37, RULE_passiveEffect = 38, RULE_activeEffect = 39, 
		RULE_effectActivationOpt = 40, RULE_effectTarget = 41, RULE_cardDefinition = 42, 
		RULE_cardProperty = 43;
	public static readonly string[] ruleNames = {
		"program", "configBlock", "boolean", "varName", "number", "varRef", "rarityName", 
		"typeName", "variableDeclaration", "typeNameVarName", "expression", "expressionContainer", 
		"addSubOp", "mulDivOp", "expressionOp", "primary", "parenthesizedExpression", 
		"literalExpression", "list", "listItem", "targetItem", "enemyTarget", 
		"paramsDef", "params", "gameSetup", "gameProperties", "stageDefinition", 
		"stageProperties", "nodeDefinition", "nodeProperties", "charSetup", "charProperties", 
		"enemyDefinition", "enemyProperties", "enemyActionDefinition", "enemyActionProperties", 
		"effectDefinition", "effectType", "passiveEffect", "activeEffect", "effectActivationOpt", 
		"effectTarget", "cardDefinition", "cardProperty"
	};

	private static readonly string[] _LiteralNames = {
		null, "'Character'", "'Health'", "'EffectEveryTurn'", "'with chance'", 
		"'or'", "'Actions'", "'Effect'", "'effects'", "'Apply'", "'damage'", "'instantly'", 
		"'end of turn'", "'for'", "'turns'", "'to'", "'enemies'", "'player'", 
		"'Outgoing'", "'Incoming'", "'is'", "'set'", "'target'", "'Deal'", "'Card'", 
		"'Rarity'", "'ValidTargets'", "'self'", "'Desc'", "'Game'", "'Stages'", 
		"'Length'", "'Max-width'", "'Min-width'", "'FillWith'", "'MustContain'", 
		"'EndsWith'", "'Node'", "'Enemies'", "'Stage'", "'Rewards'", "'Name'", 
		"'Player'", "'Enemy'", "'enemy'", "'Deck'", "'EnemyAction'", "'x'", "'*'", 
		"'/'", "'+'", "'-'", "'^'", "':'", "'['", "']'", "'{'", "'}'", "'('", 
		"')'", "','", "'%'", "'='", "'int'", "'double'", "'string'", "'bool'", 
		null, null, null, null, null, null, null, "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "CHARACTER", "HEALTH", "EFFECTEVERYTURN", "WITHCHANCE", "OR", "ACTIONS", 
		"EFFECT", "EFFECTS", "APPLY", "DAMAGE", "INSTANTLY", "ENDOFTURN", "FOR", 
		"TURNS", "TO", "ENEMIES", "PLAYER", "OUTGOING", "INCOMING", "IS", "SET", 
		"TARGET", "DEAL", "CARD", "RARITY", "VALIDTARGETS", "SELF", "DESC", "GAME", 
		"STAGES", "LENGTH", "MAXWIDTH", "MINWIDTH", "FILLWITH", "MUSTCONTAIN", 
		"ENDSWITH", "NODE", "NODEENEMIES", "STAGE", "REWARDS", "NAME", "PLAYERSELECT", 
		"ENEMY", "ENEMYLC", "DECK", "ENEMYACTION", "X", "MUL", "DIV", "PLUS", 
		"MINUS", "CARET", "CLN", "LBRACKET", "RBRACKET", "LCURLY", "RCURLY", "LPAREN", 
		"RPAREN", "COMMA", "PERCENT", "EQUALS", "INTTYPE", "DOUBLETYPE", "STRINGTYPE", 
		"BOOLEANTYPE", "TRUE", "FALSE", "STRING", "INT", "DOUBLE", "ID", "WS", 
		"EOS", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CDL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static CDLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CDLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CDLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(CDLParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConfigBlockContext[] configBlock() {
			return GetRuleContexts<ConfigBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConfigBlockContext configBlock(int i) {
			return GetRuleContext<ConfigBlockContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationContext[] variableDeclaration() {
			return GetRuleContexts<VariableDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationContext variableDeclaration(int i) {
			return GetRuleContext<VariableDeclarationContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICDLVisitor<TResult> typedVisitor = visitor as ICDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 90;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case CHARACTER:
				case EFFECT:
				case CARD:
				case GAME:
				case NODE:
				case STAGE:
				case ENEMY:
				case ENEMYACTION:
					{
					State = 88;
					configBlock();
					}
					break;
				case INTTYPE:
				case DOUBLETYPE:
				case STRINGTYPE:
				case BOOLEANTYPE:
					{
					State = 89;
					variableDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -9223292184269160318L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 7L) != 0) );
			State = 94;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConfigBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public GameSetupContext gameSetup() {
			return GetRuleContext<GameSetupContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StageDefinitionContext stageDefinition() {
			return GetRuleContext<StageDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NodeDefinitionContext nodeDefinition() {
			return GetRuleContext<NodeDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CharSetupContext charSetup() {
			return GetRuleContext<CharSetupContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnemyDefinitionContext enemyDefinition() {
			return GetRuleContext<EnemyDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnemyActionDefinitionContext enemyActionDefinition() {
			return GetRuleContext<EnemyActionDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EffectDefinitionContext effectDefinition() {
			return GetRuleContext<EffectDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CardDefinitionContext cardDefinition() {
			return GetRuleContext<CardDefinitionContext>(0);
		}
		public ConfigBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_configBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICDLVisitor<TResult> typedVisitor = visitor as ICDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConfigBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConfigBlockContext configBlock() {
		ConfigBlockContext _localctx = new ConfigBlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_configBlock);
		try {
			State = 104;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case GAME:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96;
				gameSetup();
				}
				break;
			case STAGE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 97;
				stageDefinition();
				}
				break;
			case NODE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 98;
				nodeDefinition();
				}
				break;
			case CHARACTER:
				EnterOuterAlt(_localctx, 4);
				{
				State = 99;
				charSetup();
				}
				break;
			case ENEMY:
				EnterOuterAlt(_localctx, 5);
				{
				State = 100;
				enemyDefinition();
				}
				break;
			case ENEMYACTION:
				EnterOuterAlt(_localctx, 6);
				{
				State = 101;
				enemyActionDefinition();
				}
				break;
			case EFFECT:
				EnterOuterAlt(_localctx, 7);
				{
				State = 102;
				effectDefinition();
				}
				break;
			case CARD:
				EnterOuterAlt(_localctx, 8);
				{
				State = 103;
				cardDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BooleanContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TRUE() { return GetToken(CDLParser.TRUE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FALSE() { return GetToken(CDLParser.FALSE, 0); }
		public BooleanContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_boolean; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICDLVisitor<TResult> typedVisitor = visitor as ICDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolean(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BooleanContext boolean() {
		BooleanContext _localctx = new BooleanContext(Context, State);
		EnterRule(_localctx, 4, RULE_boolean);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			_la = TokenStream.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(CDLParser.ID, 0); }
		public VarNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICDLVisitor<TResult> typedVisitor = visitor as ICDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarNameContext varName() {
		VarNameContext _localctx = new VarNameContext(Context, State);
		EnterRule(_localctx, 6, RULE_varName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(CDLParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOUBLE() { return GetToken(CDLParser.DOUBLE, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICDLVisitor<TResult> typedVisitor = visitor as ICDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumberContext number() {
		NumberContext _localctx = new NumberContext(Context, State);
		EnterRule(_localctx, 8, RULE_number);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			_la = TokenStream.LA(1);
			if ( !(_la==INT || _la==DOUBLE) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarRefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VarNameContext varName() {
			return GetRuleContext<VarNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamsContext @params() {
			return GetRuleContext<ParamsContext>(0);
		}
		public VarRefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varRef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICDLVisitor<TResult> typedVisitor = visitor as ICDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarRef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarRefContext varRef() {
		VarRefContext _localctx = new VarRefContext(Context, State);
		EnterRule(_localctx, 10, RULE_varRef);
		try {
			State = 116;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 112;
				varName();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 113;
				varName();
				State = 114;
				@params();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RarityNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(CDLParser.ID, 0); }
		public RarityNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rarityName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICDLVisitor<TResult> typedVisitor = visitor as ICDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRarityName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RarityNameContext rarityName() {
		RarityNameContext _localctx = new RarityNameContext(Context, State);
		EnterRule(_localctx, 12, RULE_rarityName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTTYPE() { return GetToken(CDLParser.INTTYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOUBLETYPE() { return GetToken(CDLParser.DOUBLETYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRINGTYPE() { return GetToken(CDLParser.STRINGTYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOLEANTYPE() { return GetToken(CDLParser.BOOLEANTYPE, 0); }
		public TypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICDLVisitor<TResult> typedVisitor = visitor as ICDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeNameContext typeName() {
		TypeNameContext _localctx = new TypeNameContext(Context, State);
		EnterRule(_localctx, 14, RULE_typeName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			_la = TokenStream.LA(1);
			if ( !(((((_la - 63)) & ~0x3f) == 0 && ((1L << (_la - 63)) & 15L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VarNameContext varName() {
			return GetRuleContext<VarNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(CDLParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LiteralExpressionContext literalExpression() {
			return GetRuleContext<LiteralExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EOS() { return GetToken(CDLParser.EOS, 0); }
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICDLVisitor<TResult> typedVisitor = visitor as ICDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclarationContext variableDeclaration() {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(Context, State);
		EnterRule(_localctx, 16, RULE_variableDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 122;
			typeName();
			State = 123;
			varName();
			State = 124;
			Match(EQUALS);
			State = 125;
			literalExpression();
			State = 126;
			Match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeNameVarNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VarNameContext varName() {
			return GetRuleContext<VarNameContext>(0);
		}
		public TypeNameVarNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeNameVarName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICDLVisitor<TResult> typedVisitor = visitor as ICDLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeNameVarName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeNameVarNameContext typeNameVarName() {
		TypeNameVarNameContext _localctx = new TypeNameVarNameContext(Context, State);
		EnterRule(_localctx, 18, RULE_typeNameVarName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			typeName();
			State = 129;
			varName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
